re-confingured settings and create docker containr